--- a/src/pages/Realtimeituation/style.less
+++ b/src/pages/Realtimeituation/style.less
@@ -7,21 +7,49 @@
     flex-wrap: wrap;
     border: 1px solid #dfdede;
 }
-.topItem{
-    width: 20%;
-    height: 100px;
-    display: inline-block;
-    background: #fff;
-    // float: left;
-    border-right: 1px solid #dfdede
+@media screen and (min-width: 610px) {
+    .topItem{
+        width: 20%;
+        height: 80px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        background: #fff;
+        // float: left;
+        border-right: 1px solid #dfdede;
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width: 609px) {
+    .topItem{
+        width: 100%;
+        height: 80px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        background: #fff;
+        // float: left;
+        border-bottom: 1px solid #dfdede;
+        font-size: 10px;
+    }
 }
 .left{
     // position: relative;
     // overflow: hidden;
 }
-img{
+.imgs{
     // position: absolute;
-    width: 30px;
-    height: 30px;
+    width: 6em;
+    height: 6em;
     border-radius: 50%
+}
+.right{
+    margin-left: 1em;
+}
+.right_amount{
+    font-weight: bold;
+    font-size: 2em;
 }
