费率页面初步完成

--- a/src/pages/ChargeMag/PowerStationMag/styles.less
+++ b/src/pages/ChargeMag/PowerStationMag/styles.less
@@ -19,7 +19,7 @@
     // background: rgb(175, 80, 80);
 }
 .add{
-    background: rgb(72, 224, 72);
+    // background: rgb(72, 224, 72);
     color: white
 }
 .search{
