--- a/src/pages/ChargeMag/RateMag/stopRate/styles.less
+++ b/src/pages/ChargeMag/RateMag/stopRate/styles.less
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 .munLeft{
     width: 80%;
@@ -45,4 +45,9 @@
     align-items: center!important;
     width:50px!important;
     margin-top: 5px!important;
+}
+.goBack{
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
