--- a/src/global.less
+++ b/src/global.less
@@ -22,6 +22,11 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  // :global {
+  //   .ant-table-thead > tr > th{
+  //     background: #000!important;
+  //   }
+  // }
 }
 
 ul,
