--- a/src/global.less
+++ b/src/global.less
@@ -18,15 +18,28 @@ canvas {
   display: block;
 }
 
+.iconfont{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+@font-face {
+  font-family: 'iconfont';  /* project id 1654976 */
+  src: url('//at.alicdn.com/t/font_1654976_j6p9pbu1vdm.eot');
+  src: url('//at.alicdn.com/t/font_1654976_j6p9pbu1vdm.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1654976_j6p9pbu1vdm.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1654976_j6p9pbu1vdm.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1654976_j6p9pbu1vdm.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1654976_j6p9pbu1vdm.svg#iconfont') format('svg');
+}
+
 body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  // :global {
-  //   .ant-table-thead > tr > th{
-  //     background: #000!important;
-  //   }
-  // }
 }
 
 ul,
