--- a/src/pages/FinanceMag/OrderMag/styles.less
+++ b/src/pages/FinanceMag/OrderMag/styles.less
@@ -3,21 +3,22 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
 }
 .munLeft{
     width: 70%;
     display: flex;
-    justify-content: space-around;
+    margin-bottom: 10px;
+    justify-content:space-between;
     flex-wrap: wrap;    
     // background: #000;
 }
-.munRight{
-    width: 20%;
-    display: flex;
-    justify-content: flex-end
-    // background: rgb(175, 80, 80);
-}
+// .munRight{
+//     width: 20%;
+//     display: flex;
+//     justify-content: flex-end
+//     // background: rgb(175, 80, 80);
+// }
 .add{
     // background: rgb(72, 224, 72);
     color: white
@@ -33,4 +34,21 @@
 .export{
     background: rgb(226, 172, 23);
     color: white
+}
+.actionBox{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap
+}
+.actionBox_btn{
+    display: flex!important;
+    justify-content: center!important;
+    align-items: center!important;
+    width:40px!important;
+    margin-top: 5px!important;
+}
+.goBack{
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
